[TASK] playlist and playlist videos endpoints are fully working - tested with postman TODO: update api_docs.yaml properly
