# backend/models/playlist_video.py
@@ -1,4 +1,4 @@
-from sqlalchemy import Column, Integer, String, Date, Boolean, ForeignKey, Text, Float
+from sqlalchemy import Column, Integer, ForeignKey
 from sqlalchemy.orm import relationship
 from models.base import Base
 
@@ -9,3 +9,6 @@ class PlaylistVideo(Base):
     id = Column(Integer, primary_key=True)
     playlist_id = Column(Integer, ForeignKey('playlists.id'))
     video_id = Column(Integer, ForeignKey('videos.id'))
+
+    playlist = relationship('Playlist', back_populates='playlist_videos')
+    video = relationship('Video', back_populates='playlist_videos')
