# backend/models/user.py
@@ -1,4 +1,4 @@
-from sqlalchemy import Column, Integer, String, Date, Boolean, ForeignKey, Text, Float
+from sqlalchemy import Column, Integer, String, Date, Text
 from sqlalchemy.orm import relationship
 from models.base import Base
 
@@ -12,5 +12,12 @@ class User(Base):
     username = Column(String(100), unique=True, nullable=False)
     email = Column(String(100), unique=True, nullable=False)
     birthday = Column(Date)
-    password_hash = Column(String(255), nullable=False)
+    password_hash = Column(Text, nullable=False)
     role = Column(Integer, nullable=False, default=0)
+
+    comments = relationship('Comment', back_populates='user',
+                            cascade='all, delete-orphan')
+    likes = relationship('Like', back_populates='user',
+                         cascade='all, delete-orphan')
+    playlists = relationship('Playlist', back_populates='user',
+                             cascade='all, delete-orphan')
